2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* tooltips with complete proof command

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* external node window height configurable

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* initial size of sequent window configurable

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve save button

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* save/restore buttons in configuration dialog

2011-07-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change colors in configuration record into RGB triplets

2011-07-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* apply and ok in configuration window

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor default size in configuration record

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor tooltips in configuration record

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor colors in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor fonts in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* configuration dialog layout finished, no effects yet

2011-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* help and exit menu items

2011-07-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add menu with about dialog

2011-07-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix different line length problem

2011-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* invert dragging direction

2011-07-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* move proof tree by dragging with mouse 1

2011-07-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* internal documentation of main, input

2011-07-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* display external node windows on double click or shift
	  click

2011-07-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve current node positioning
