@@ -1,3 +1,7 @@
+2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* improve makefile and configure
+
 2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* tooltips with complete proof command
